test/CheckError/Const/ModifyConstParamVariable.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

void f(const int value) {
	// CHECK: .loci:7:2: error: template arguments do not satisfy require predicate 'const(int_t) : sized_type_t and const(int_t) : movable_t<notag(int_t)>' of method 'assign'
	// CHECK: .loci:7:2: note: because: mutator method '__move' is required but type is const
	value = 1;
}

// CHECK: 1 error generated.
